tests/ui/feature-gates/feature-gate-c-char-type.rs
#[cfg(c_char_type = "default")]
//~^ ERROR is experimental
fn main() {

}
